# autograder

./: .gitignore  .pre-commit-config.yaml  __init__.py  main.py  pyproject.toml
autograder/: __init__.py
autograder/core/: __init__.py  assertions.py  monitors.py  options.py  testing.py  utils.py
autograder/runners/: __init__.py  gdb.py  qemu.py  runner.py
core/: __init__.py  assertions.py  monitors.py  options.py  testing.py  utils.py
runners/: gdb.py  qemu.py  runner.py
src/autograder/: __init__.py  config.py  testcase.py
src/autograder/gdb/: __init__.py  breakpoint.py  data.py  exec.py  file.py  gdb.py  locspec.py  stack.py  sync.py  target.py  utils.py
src/autograder/qemu/: __init__.py  console.py  monitor.py
src/autograder/tests/: __init__.py  lab1.py
tests/: lab1.py
