[project]
name = "autograder"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygdbmi",
    "pre-commit",
    "qemu@/zju-os/qemu-10.1.0+ds/python",
    "pycotap>=1.3.1",
]

[project.scripts]
autograder = "autograder:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
python-preference = "managed"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[[tool.uv.index]]
#url = "https://mirrors.zju.edu.cn/pypi/web/simple"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
